2010-01-26  kitone  <kitone@gna.org>

	* src/Makefile.am:
	Remove unused value LIBUIMM_LIBS & LIBUIMM_FLAGS.

2010-01-26  kitone  <kitone@gna.org>

	* src/vp/gstplayer.cc:
	Clear Gdk::Window when the widget is resize.

2010-01-20  kitone  <kitone@gna.org>

	* src/we/waveformeditor.cc:
	Save the scale value of the waveform editor.

2010-01-20  kitone  <kitone@gna.org>

	* share/ui/subtitleeditor.ui:
	Fix previous commit. (2010-01-14)

2010-01-19  kitone  <kitone@gna.org>

	* plugins/actions/documentmanagement/documentmanagement.cc:
	* share/menubar.xml:
	* src/gui/menubar.cc:
	Cleanup of the menu File. 'Open Project' and 'Save Project' have been added.

2010-01-19  kitone  <kitone@gna.org>

	* src/gui/dialogfilechooser.cc:
	* src/gui/dialogfilechooser.h:
	Add function set_current filter. Use dynamic Gtk::FileFilter.

2010-01-19  kitone  <kitone@gna.org>

	* src/gui/textviewcell.cc:
	* src/gui/textviewcell.h:
	Fixes the cell editing. 
	Undesirable behavior with focus out/in.

2010-01-19  kitone  <kitone@gna.org>

	* src/gui/cellrenderercustom.h:
	Improve debug info and fix fr comment.

2010-01-16  kitone  <kitone@gna.org>

	* src/keyframes.cc:
	Fix possible leak caused by an uninitialized value.

2010-01-15  kitone  <kitone@gna.org>

	* share/ui/subtitleeditor.ui:
	Fix previous error commit.

2010-01-14  kitone  <kitone@gna.org>

	* plugins/actions/changeframerate/dialog-change-framerate.ui:
	* plugins/actions/configurekeyboardshortcuts/dialog-configure-keyboard-shortcuts.ui:
	* plugins/actions/errorchecking/dialog-error-checking-preferences.ui:
	* plugins/actions/errorchecking/dialog-error-checking.ui:
	* plugins/actions/externalvideoplayer/dialog-external-video-player-preferences.ui:
	* plugins/actions/findandreplace/dialog-find-and-replace.ui:
	* plugins/actions/movesubtitles/dialog-move-subtitles.ui:
	* plugins/actions/preferences/dialog-preferences.ui:
	* plugins/actions/scalesubtitles/dialog-scale-subtitles.ui: