@@ -1,5 +1,11 @@
 2010-01-26  kitone  <kitone@gna.org>
 
+	* plugins/actions/textcorrection/textcorrection.cc:
+	Fix crash caused by the text correction tool. 
+	Improve dbg msg.
+
+2010-01-26  kitone  <kitone@gna.org>
+
 	* src/Makefile.am:
 	Remove unused value LIBUIMM_LIBS & LIBUIMM_FLAGS.
 
